<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="0.5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/week_work_plan_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:background="@color/action_bar_background"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/week_work_item_title_example_text"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <ImageView
                android:id="@+id/week_work_plan_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@mipmap/delete_icon"
                android:contentDescription="@string/week_work_plan_delete_item" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="@string/start_time" />

            <EditText
                android:id="@+id/week_work_plan_item_start_time"
                style="@style/week_work_plan_item_item_right_text_style"
                android:drawableEnd="@drawable/selector_calendar"
                android:drawableRight="@drawable/selector_calendar"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_start_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="@string/end_time" />

            <EditText
                android:id="@+id/week_work_plan_item_end_time"
                style="@style/week_work_plan_item_item_right_text_style"
                android:drawableEnd="@drawable/selector_calendar"
                android:drawableRight="@drawable/selector_calendar"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_end_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="@string/week" />

            <EditText
                android:id="@+id/week_work_plan_item_week"
                style="@style/week_work_plan_item_item_right_text_style"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="@string/work_site" />

            <EditText
                android:id="@+id/week_work_plan_item_work_site"
                style="@style/week_work_plan_item_item_right_text_style"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="@string/edit_work_site"
                android:inputType="textMultiLine" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="@string/work_content" />

            <EditText
                android:id="@+id/week_work_plan_item_work_content"
                style="@style/week_work_plan_item_item_right_text_style"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="@string/edit_work_content"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="@string/attend_lead" />

            <EditText
                android:id="@+id/week_work_plan_work_item_attend_lead"
                style="@style/week_work_plan_item_item_right_text_style"
                android:layout_gravity="center_vertical|center_horizontal"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_attend_lead"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_week_work_plan_item_organization_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="组织名称" />

            <EditText
                android:id="@+id/week_work_plan_item_organization_name"
                style="@style/week_work_plan_item_item_right_text_style"
                android:layout_gravity="center_vertical|center_horizontal"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/week_work_plan_item_item_left_text_style"
                android:text="@string/participants" />

            <EditText
                android:id="@+id/week_work_plan_item_work_participants"
                style="@style/week_work_plan_item_item_right_text_style"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="@string/edit_participants"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>